# QuickCraft

./: .gitignore  .gitmodules  CMakeLists.txt  Dawn.cmake  README.md
res/: block.wgsl  instanced.wgsl  shader.wgsl  simple.wgsl  test.wgsl  world.wgsl
source/: Test.hpp  main.cpp
source/core/: Context.cpp  Context.hpp  Input.cpp  Input.hpp  Utils.cpp  Utils.hpp  camera.cpp  input.cpp  pipeline.cpp  shader.cpp  webgpu.cpp
source/core/builder/: RenderPipelineBuilder.cpp  RenderPipelineBuilder.hpp
source/game/: Camera.cpp  FastNoise.cpp  MiniCraft.cpp  MiniCraft.hpp  Pipelines.cpp  Pipelines.hpp  Ref.hpp  Uniforms.hpp  Vertex.hpp
source/game/utils/: Raycast.cpp  Raycast.hpp
source/game/world/: Chunk.cpp  Chunk.hpp  Structs.hpp  World.cpp  World.hpp
source/game/world/render/: WorldRenderer.cpp  WorldRenderer.hpp
source/include/core/: buffer.hpp  pipeline.hpp  shader.hpp  webgpu.hpp
